0.1694
    - reserved_word_quote is DEPRECATED! this is renamed to quote
    - DBIx::Custom::Model type attribute is DEPRECATED!
      this is renamed to bind_type.
0.1693
    - separate DBIx::Custom type_rule from filter
    - DBIx::Custom::Model filter attrribute is DEPRECATED!
    - DBIx::Custom::Model name attribute is DEPRECATED!
    - removed EXPERIMENTAL DBIx::Custom::Model alias_table
    - added DBIx::Custom column method's table option
    - separate DBIx::Custom::Result type_rule from filter again
0.1692
    - removed EXPERIMENTAL DBIx::Model result_filter
    - DBIx::Custom::Result filter override type_rule
    - added EXPERIMENTAL DBIx::Custom::Result type_rule
    - added EXPERIMENTAL available_type_name method 
    - EXPERIMENTAL type_rule_off is not passed form execute method 
      to DBIx::Custom::Result object
0.1691
    - DBIx::Custom::Result end_filter, remove_filter, remove_end_filter is DEPRECATED!
    - apply_filter is DEPRECATED!
    - EXPERIMETAL column method and table_alias think about "-" separator
    - EXPERIMTANL column method think about separator
    - removed EXPERIMENTAL col method.
    - added EXPERIMENTAL separater method
    - added EXPERIMENTAL select prefix option.
    - fixed bug that data_source DEPRECATED warnings pirnt STDERR
    - fixed bug that type_rule from option can't receive filter name
0.1690
    - use latest Object::Simple features
0.1689
    - added EXPERIMENTAL available_data_type
    - simplified type_rule
    - changed type_rule arguments format
    - added EXPERIMENTAL DBIx::Custom::Model result_filter attribute
    - added EXPERIMETNAL DBIx::Custom::Result filter_off method
    - EXPERIMENTAL type_rule can receive filter name
0.1688
    - fixed bug that model insert, update, delete select can't
      odd number arguments
    - improved type_rule method
0.1687
    - added EXPERIMENTAL type_rule method
    - added EXPERIMENTAL execute() type_rule_off option